# sensor_fusion_specialization

./: .gitignore  README.md
1_Lidar/: CMakeLists.txt  Dockerfile
1_Lidar/src/: environment.cpp  processPointClouds.cpp
1_Lidar/src/quiz/cluster/: cluster.cpp  kdtree.h
1_Lidar/src/quiz/ransac/: CMakeLists.txt  ransac2d.cpp
2_Camera/Extras/6_lidar_to_camera/lidar_to_camera/: CMakeLists.txt
2_Camera/Extras/7_yolo_detect_objects/: YOLO Links.txt
2_Camera/SFND_2D_Feature_Tracking/data/: results.csv
2_Camera/SFND_2D_Feature_Tracking/src/: MidTermProject_Camera_Student.cpp  matching2D.hpp  matching2D_Student.cpp  ring_buffer.hpp
2_Camera/SFND_3D_Object_Tracking-master/: CMakeLists.txt
2_Camera/SFND_3D_Object_Tracking-master/.ipynb_checkpoints/: TTC Report and Data Analysis-checkpoint.ipynb
2_Camera/SFND_3D_Object_Tracking-master/dat/: analysis.csv
2_Camera/SFND_3D_Object_Tracking-master/src/: FinalProject_Camera.cpp  camFusion.hpp  camFusion_Student.cpp  matching2D.hpp  matching2D_Student.cpp
3_Radar/: README.md  SFND_radar.m
3_Radar/Extras/: Solution_FFT_2d.ipynb  doppler_estimation_2.m  fft2D_4.m  fft_3.m  maximum_range_calculation_0.m  range_estimation_1.m
4_Kalman_Filters/SFND_Unscented_Kalman_Filter-master/src/: ukf.cpp  ukf.h
4_Kalman_Filters/extras/kalman_and_ekf/2_laser_kalman_filter/: CMakeLists.txt
4_Kalman_Filters/extras/kalman_and_ekf/2_laser_kalman_filter/src/: main.cpp  tracking.cpp
SFND_Lidar_Obstacle_Detection/: CMakeLists.txt
SFND_Lidar_Obstacle_Detection/src/: environment.cpp  processPointClouds.cpp  processPointClouds.h
(+24 files in other folders)
